# dentistry-api

./: .dockerignore  .env.app  .env.app.secret  .env.db  .env.db.secret  .env.dev  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  README.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  heroku.yml  pyproject.toml  pytest.ini  setup.cfg
.circleci/: config.yml
.gitsecret/keys/: pubring.kbx  trustdb.gpg
.gitsecret/paths/: mapping.cfg
api/: conftest.py  urls.py
api/medical_records/: serializers.py  tests.py  urls.py  views.py
api/s3/: tests.py  urls.py  views.py
api/users/: serializers.py  tests.py  urls.py  views.py
core/: factories.py
core/management/commands/: seed.py
dentistry/: asgi.py  settings.py  urls.py  wsgi.py
medical_records/: admin.py  constants.py  models.py  tests.py
medical_records/migrations/: 0001_patient.py  0002_rename_photo_to_profile_picture_url_patient.py  0003_patient_first_appointment_reason.py  0004_medicalbackground.py  0005_periodontalexam.py  0006_nonpathologicalbackground.py  0007_clinicalexam.py  0008_rename_medicalbackground_to_medical_background.py  0009_move_history_from_patient_to_medicalbackground.py  0010_remove_fields_in_patient.py  0011_remove_drinker_smoker_from_medicalbackground.py  0012_update_related_name.py  0013_update_related_names_non_pathological_background.py  0014_update_related_names_clinical_exam.py  0015_use_json_field_from_django.py
medicalrecords/: apps.py
users/: models.py  signals.py  tests.py
users/migrations/: 0001_initial.py  0002_update_related_name.py
