[tool.poetry]
name = "dentistry"
version = "0.1.0"
description = "This is an API for a project to help dentists manage their clinics."
authors = ["M <m@mathsistor.com>", "Sika <sikabarca@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.0.6"
psycopg2-binary = "^2.8.5"
dj-database-url = "^0.5.0"
django-environ = "^0.4.5"
django-extensions = "^2.2.9"
djangorestframework = "^3.11.0"
django-cors-headers = "^3.2.1"
gunicorn = "^20.0.4"
whitenoise = "^5.0.1"

[tool.poetry.dev-dependencies]
ipython = "^7.14.0"
pytest-django = "^3.9.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
